--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -227,15 +227,13 @@
                 <RadioGroup
                     android:layout_width="match_parent"
                     android:orientation="horizontal"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" >
+                    android:layout_height="35dp">
 
                     <RadioButton
                         android:text="date"
-                        android:layout_width="wrap_content"
+                        android:layout_width="172dp"
                         android:layout_height="wrap_content"
-                        android:id="@+id/radioButton9"
-                        android:layout_weight="1" />
+                        android:id="@+id/radioButton9" />
 
                     <RadioButton
                         android:text="time"
@@ -248,20 +246,29 @@
 
             </LinearLayout>
 
-            <FrameLayout
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="300dp">
+                android:layout_height="100dp"
+                >
 
-                <TimePicker
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/timePicker3" />
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <CalendarView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/calendarView2" />
-            </FrameLayout>
+                    <TimePicker
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="invisible"
+                        android:id="@+id/timePicker3" />
+
+                    <CalendarView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="invisible"
+                        android:id="@+id/calendarView2" />
+                </FrameLayout>
+            </LinearLayout>
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -272,16 +279,16 @@
                 <Button
                     android:text="Button"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:id="@+id/button6"
-                    android:layout_weight="0.30" />
+                    />
 
                 <Button
                     android:text="Button"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:id="@+id/button5"
-                    android:layout_weight="0.35" />
+                  />
             </LinearLayout>
 
         </LinearLayout>
